# ProcGuard

./: .gitignore  CMakeLists.txt  Makefile  README.md  proc_scanner.py  requirements.txt  run.py  strace_filter.py
IPC/shared_mem/: Makefile  reader.cpp  shared_mem.hpp  writer.cpp
ProcGuard/: Makefile  check_pid_strace.py  proc_analyzer.py  procguard.cpp  run_all.sh  scanner.py  strace_filter.py
ProcGuard/diagram/: proc_guard.drawio
ProcGuard/src/: DBManager.cpp  DBManager.hpp  DBMgr.cpp  MsgQueue.hpp  ProcStatusMgr.cpp  ProcStatusMgr.hpp  SuspiciousDetector.cpp  common.h
ProcGuard/src/common/: DBMgr.cpp  MsgQueue.cpp  ProcStatusMgr.cpp
ProcGuard/src/include/: DBMgr.hpp  MsgQueue.hpp  ProcBlackList.hpp  ProcStatusMgr.hpp  common.h
ProcGuard/src/targets/: MsgHandler.cpp  ProcMonitor.cpp  ProcWatcher.cpp  SuspiciousDetector.cpp
docs/: Info_collection_staregy.md
ml_data/: data.json
proc_scanner/: DBMgr.py  proc_scanner.py
src/common/: DBMgr.cpp  MsgQueue.cpp  ProcBlackList.cpp  ProcGuiHandler.cpp  ProcStatusMgr.cpp  ProcUtils.cpp
src/common/ProcWatcherHandlers/: DStraceHandler.cpp  SPMemHandler.cpp
src/include/: DBMgr.hpp  MsgQueue.hpp  ProcBlackList.hpp  ProcGuiHandler.hpp  ProcStatusMgr.hpp  ProcUtils.hpp  common.h  commonPathes.h  commonTypes.h
src/include/ProcWatcherHandlers/: DStraceHandler.hpp  IDHandler.hpp  ISPHandler.hpp  SPDeadLockHandler.hpp  SPMemHandler.hpp
src/targets/: ProcCleaner.cpp  ProcGui.cpp  ProcMonitor.cpp  ProcWatcher.cpp
tests/: bad_job.cpp  deadlock_job.cpp  job.cpp  job2.cpp
tools/: proc_analyzer.py
